# ffxiv-otp

./: Cargo.toml  README.md
src/: main.rs
