[package]
name = "ffxiv-otp"
version = "1.0.0"
description = "A small utility to send TOTP codes to XIVLauncher.Core"
edition = "2021"
exclude = [
    ".gitignore",
    "LICENSE",
    "README.md"
]
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
miette = { version = "5.4.1", features = ["fancy"] }
reqwest = "0.11.12"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
totp-rs = "3.1.0"
